--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-=<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,38 @@
     <title>Document</title>
   </head>
   <body>
-    Hello world!
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>San Francisco</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13 km/h
+        </p>
+      </div>
+      <div>⛅ 12&degC</div>
+    </main>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/saallyyang" target="_blank"> Sally</a>, code
+      hosted on
+      <a
+        href="https://github.com/saallyyang/Week-7-Vanilla-Weather-Search-Homework"
+        target="_blank"
+        >GitHub</a
+      >
+      and website hosted
+      <a
+        href="https://main--vanilla-weather-search-app.netlify.app/"
+        target="_blank"
+        >on Netlify</a
+      >
+    </footer>
   </body>
 </html>
