--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title></title>
   </head>
   <body>
-    <div class="weather-app-engine" id="search-form">
+    <div class="weather-app-engine">
     <header>
-      <form>
+      <form id="search-form">
         <input class="search-form-input" type="search" placeholder="Enter a city..." required id="search-form-input"/>
         <input class="search-form-button" type="submit" value="Search" />
       </form>
