Insert forecast HTML from JS

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="unit">&degC</div>
           </div>
         </div>
+        <div class="forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
